# airbnb

./: db.sqlite3  pyproject.toml
booking/: models.py
booking/migrations/: 0001_initial.py  0002_rename_expoerience_booking_experience.py
catagories/: admin.py  models.py
catagories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: settings.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details.py  0003_experience_category.py
medias/: models.py
medias/migrations/: 0001_initial.py
reviews/: models.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options_rename_onwer_room_owner.py  0004_room_country.py  0005_room_category.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_currency_user_gender_user_language.py  0003_alter_user_avatar.py
wishlists/: models.py
wishlists/migrations/: 0001_initial.py
