[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["jaeyunim00 <71920791+jaeyunim00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
